Try running each flavor in a single job instead of splitting into 4.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -54,84 +54,84 @@ environment:
       PYVER: 27
       BUILD_JOB_NUM: 1
       COVERAGE: 0
-    - WINPYTHON: "Python27"
-      PYTHON: "2.7"
-      PYVER: 27
-      BUILD_JOB_NUM: 2
-      COVERAGE: 0
-    - WINPYTHON: "Python27"
-      PYTHON: "2.7"
-      PYVER: 27
-      BUILD_JOB_NUM: 3
-      COVERAGE: 0
-    - WINPYTHON: "Python27"
-      PYTHON: "2.7"
-      PYVER: 27
-      BUILD_JOB_NUM: 4
-      COVERAGE: 0
+    # - WINPYTHON: "Python27"
+    #   PYTHON: "2.7"
+    #   PYVER: 27
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 0
+    # - WINPYTHON: "Python27"
+    #   PYTHON: "2.7"
+    #   PYVER: 27
+    #   BUILD_JOB_NUM: 3
+    #   COVERAGE: 0
+    # - WINPYTHON: "Python27"
+    #   PYTHON: "2.7"
+    #   PYVER: 27
+    #   BUILD_JOB_NUM: 4
+    #   COVERAGE: 0
 
     - WINPYTHON: "Python35"
       PYTHON: "3.5"
       PYVER: 35
       BUILD_JOB_NUM: 1
       COVERAGE: 0
-    - WINPYTHON: "Python35"
-      PYTHON: "3.5"
-      PYVER: 35
-      BUILD_JOB_NUM: 2
-      COVERAGE: 0
-    - WINPYTHON: "Python35"
-      PYTHON: "3.5"
-      PYVER: 35
-      BUILD_JOB_NUM: 3
-      COVERAGE: 0
-    - WINPYTHON: "Python35"
-      PYTHON: "3.5"
-      PYVER: 35
-      BUILD_JOB_NUM: 4
-      COVERAGE: 0
+    # - WINPYTHON: "Python35"
+    #   PYTHON: "3.5"
+    #   PYVER: 35
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 0
+    # - WINPYTHON: "Python35"
+    #   PYTHON: "3.5"
+    #   PYVER: 35
+    #   BUILD_JOB_NUM: 3
+    #   COVERAGE: 0
+    # - WINPYTHON: "Python35"
+    #   PYTHON: "3.5"
+    #   PYVER: 35
+    #   BUILD_JOB_NUM: 4
+    #   COVERAGE: 0
 
     - WINPYTHON: "Python36"
       PYTHON: "3.6"
       PYVER: 36
       BUILD_JOB_NUM: 1
       COVERAGE: 1
-    - WINPYTHON: "Python36"
-      PYTHON: "3.6"
-      PYVER: 36
-      BUILD_JOB_NUM: 2
-      COVERAGE: 1
-    - WINPYTHON: "Python36"
-      PYTHON: "3.6"
-      PYVER: 36
-      BUILD_JOB_NUM: 3
-      COVERAGE: 1
-    - WINPYTHON: "Python36"
-      PYTHON: "3.6"
-      PYVER: 36
-      BUILD_JOB_NUM: 4
-      COVERAGE: 1
+    # - WINPYTHON: "Python36"
+    #   PYTHON: "3.6"
+    #   PYVER: 36
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 1
+    # - WINPYTHON: "Python36"
+    #   PYTHON: "3.6"
+    #   PYVER: 36
+    #   BUILD_JOB_NUM: 3
+    #   COVERAGE: 1
+    # - WINPYTHON: "Python36"
+    #   PYTHON: "3.6"
+    #   PYVER: 36
+    #   BUILD_JOB_NUM: 4
+    #   COVERAGE: 1
 
     - WINPYTHON: "Python37"
       PYTHON: "3.7"
       PYVER: 37
       BUILD_JOB_NUM: 1
       COVERAGE: 0
-    - WINPYTHON: "Python37"
-      PYTHON: "3.7"
-      PYVER: 37
-      BUILD_JOB_NUM: 2
-      COVERAGE: 0
-    - WINPYTHON: "Python37"
-      PYTHON: "3.7"
-      PYVER: 37
-      BUILD_JOB_NUM: 3
-      COVERAGE: 0
-    - WINPYTHON: "Python37"
-      PYTHON: "3.7"
-      PYVER: 37
-      BUILD_JOB_NUM: 4
-      COVERAGE: 0
+    # - WINPYTHON: "Python37"
+    #   PYTHON: "3.7"
+    #   PYVER: 37
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 0
+    # - WINPYTHON: "Python37"
+    #   PYTHON: "3.7"
+    #   PYVER: 37
+    #   BUILD_JOB_NUM: 3
+    #   COVERAGE: 0
+    # - WINPYTHON: "Python37"
+    #   PYTHON: "3.7"
+    #   PYVER: 37
+    #   BUILD_JOB_NUM: 4
+    #   COVERAGE: 0
 
 # remove sets of build jobs based on critia below
 # to fine tune the number and platforms tested
@@ -207,7 +207,7 @@ build_script:
 
   # setup portion of tests for this build job (1-4)
   - ps: |
-      $TOTAL_BUILD_JOBS = 4;
+      $TOTAL_BUILD_JOBS = 1;
       $Lines = (Get-Content all_tests.txt | Measure-Object -line).Lines;
       $start = ($Lines / $TOTAL_BUILD_JOBS) * ($Env:BUILD_JOB_NUM - 1);
       $end = ($Lines / $TOTAL_BUILD_JOBS) * $Env:BUILD_JOB_NUM;
