--- a/test/Actions/pre-post-fixture/work2/SConstruct
+++ b/test/Actions/pre-post-fixture/work2/SConstruct
@@ -1,8 +1,8 @@
 def b(target, source, env):
     with open(str(target[0]), 'wb') as f:
         f.write((env['X'] + '\n').encode())
-env1 = Environment(X='111')
-env2 = Environment(X='222')
+env1 = Environment(X='111', tools=[])
+env2 = Environment(X='222', tools=[])
 B = Builder(action = b, env = env1, multi=1)
 print("B =", B)
 print("B.env =", B.env)
