--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -145,17 +145,12 @@ matrix:
     - image: Visual Studio 2015
       WINPYTHON: "Python37"
 
-    - image: Visual Studio 2015
-      WINPYTHON: "Python35"
 
     # test python 2.7, 3.8 on Visual Studio 2017 image
     - image: Visual Studio 2017
       WINPYTHON: "Python35"
     - image: Visual Studio 2017
       WINPYTHON: "Python37"
-
-    - image: Visual Studio 2017
-      WINPYTHON: "Python36"
 
     # test python 3.7 on Visual Studio 2019 image
     - image: Visual Studio 2019
@@ -164,9 +159,6 @@ matrix:
       WINPYTHON: "Python35"
     - image: Visual Studio 2019
       WINPYTHON: "Python36"
-
-    - image: Visual Studio 2019
-      WINPYTHON: "Python37"
 
     # skip on Ubuntu
     - image: Ubuntu
@@ -214,12 +206,12 @@ build_script:
         $coveragercFile|Set-Content "$($env:COVERAGE_PROCESS_START)";
       }
 
-  # Only run one test for now.
+  # Create exclude_list.txt (was used to exclude some failing tests due to appveyor issues)
   - ps: |
       New-Item -Name exclude_list.txt -ItemType File
-      Remove-Item -Path 'all_tests.txt'
-      New-Item -Name all_tests.txt -ItemType File
-      Add-Content -Path 'all_tests.txt' -Value 'test\option\taskmastertrace.py'
+      # Remove-Item -Path 'all_tests.txt'
+      # New-Item -Name all_tests.txt -ItemType File
+      # Add-Content -Path 'all_tests.txt' -Value 'test\option\taskmastertrace.py'
 
   # setup portion of tests for this build job (1-4)
   - ps: |
@@ -234,7 +226,7 @@ build_script:
   # Windows run the tests
   # NOTE: running powershell from cmd on purpose because it formats the output
   # correctly
-  - cmd: powershell -Command "& { if($env:COVERAGE -eq 99) { coverage run -p --rcfile=$($env:COVERAGE_PROCESS_START) runtest.py -j 2 -t --exclude-list exclude_list.txt -f build_tests.txt } else { C:\\%WINPYTHON%\\python.exe runtest.py -j 2 -t --exclude-list exclude_list.txt -f build_tests.txt }; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
+  - cmd: powershell -Command "& { if($env:COVERAGE -eq 1) { coverage run -p --rcfile=$($env:COVERAGE_PROCESS_START) runtest.py -j 2 -t --exclude-list exclude_list.txt -f build_tests.txt } else { C:\\%WINPYTHON%\\python.exe runtest.py -j 2 -t --exclude-list exclude_list.txt -f build_tests.txt }; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
 
   # linux run the tests
   # unset JAVA_TOOL_OPTIONS because newer java prints this to stderr
