--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -204,5 +204,5 @@ on_finish:
     #- cmd: "C:\\%WINPYTHON%\\python.exe -m pip install --user -U coveralls"
     #- sh: python$PYTHON -m pip install --user -U coveralls
     #- ps: coveralls --rcfile="$($env:COVERAGE_PROCESS_START)"
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
