--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -79,35 +79,35 @@ environment:
       BUILD_JOB_NUM: 1
       COVERAGE: 0
 
-    - WINPYTHON: "Python27"
-      PYTHON: "2.7"
-      PYVER: 27
-      BUILD_JOB_NUM: 2
-      COVERAGE: 0
+    # - WINPYTHON: "Python27"
+    #   PYTHON: "2.7"
+    #   PYVER: 27
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 0
 
-    - WINPYTHON: "Python35"
-      PYTHON: "3.5"
-      PYVER: 35
-      BUILD_JOB_NUM: 2
-      COVERAGE: 0
+    # - WINPYTHON: "Python35"
+    #   PYTHON: "3.5"
+    #   PYVER: 35
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 0
 
-    - WINPYTHON: "Python36"
-      PYTHON: "3.6"
-      PYVER: 36
-      BUILD_JOB_NUM: 2
-      COVERAGE: 1
+    # - WINPYTHON: "Python36"
+    #   PYTHON: "3.6"
+    #   PYVER: 36
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 1
 
-    - WINPYTHON: "Python37"
-      PYTHON: "3.7"
-      PYVER: 37
-      BUILD_JOB_NUM: 2
-      COVERAGE: 0
+    # - WINPYTHON: "Python37"
+    #   PYTHON: "3.7"
+    #   PYVER: 37
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 0
 
-    - WINPYTHON: "Python38"
-      PYTHON: "3.8"
-      PYVER: 38
-      BUILD_JOB_NUM: 2
-      COVERAGE: 0
+    # - WINPYTHON: "Python38"
+    #   PYTHON: "3.8"
+    #   PYVER: 38
+    #   BUILD_JOB_NUM: 2
+    #   COVERAGE: 0
 
 
 # remove sets of build jobs based on critia below
@@ -195,7 +195,7 @@ build_script:
 
   # setup portion of tests for this build job (1-4)
   - ps: |
-      $TOTAL_BUILD_JOBS = 2;
+      $TOTAL_BUILD_JOBS = 1;
       $Lines = (Get-Content all_tests.txt | Measure-Object -line).Lines;
       $start = ($Lines / $TOTAL_BUILD_JOBS) * ($Env:BUILD_JOB_NUM - 1);
       $end = ($Lines / $TOTAL_BUILD_JOBS) * $Env:BUILD_JOB_NUM;
