debugging coverage failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -113,9 +113,9 @@ jobs:
 #        - sudo apt-get -y install python$PYTHON
 #        - wget https://bootstrap.pypa.io/get-pip.py
 #        - sudo -H python$PYTHON get-pip.py
-        - which python$PYTHON
-        - python$PYTHON --version
-        - python$PYTHON -m pip install --user -U coverage codecov
+        - which python
+        - python --version
+        - python -m pip install --user -U coverage codecov
         # set this ensure user sites are available
         - export PYTHONNOUSERSITE=
         # attempt to get a location where we can store the usercustomize.py file
