--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -186,12 +186,14 @@ build_script:
         $coveragercFile|Set-Content "$($env:COVERAGE_PROCESS_START)";
       }
 
-  # Create exclude_list.txt (was used to exclude some failing tests due to appveyor issues)
+  # exclude VS 10.0 because it hangs the testing until this is resolved:
+  # https://help.appveyor.com/discussions/problems/19283-visual-studio-2010-trial-license-has-expired
   - ps: |
       New-Item -Name exclude_list.txt -ItemType File
-      # Remove-Item -Path 'all_tests.txt'
-      # New-Item -Name all_tests.txt -ItemType File
-      # Add-Content -Path 'all_tests.txt' -Value 'test\option\taskmastertrace.py'
+      $workaround_image = "Visual Studio 2015"
+      if ($env:APPVEYOR_BUILD_WORKER_IMAGE -eq $workaround_image) {
+        Add-Content -Path 'exclude_list.txt' -Value 'test\MSVS\vs-10.0-exec.py'
+      }
 
   # setup portion of tests for this build job (1-4)
   - ps: |
