--- a/.travis.yml
+++ b/.travis.yml
@@ -106,15 +106,15 @@ jobs:
         - export PYTHONNOUSERSITE=
         # attempt to get a location where we can store the usercustomize.py file
         - python -m site
-        - export PYSITEDIR=$(python -m site --user-site)
-        - sudo mkdir -p $PYSITEDIR
-        - sudo touch ${PYSITEDIR}/usercustomize.py
+#        - export PYSITEDIR=$(python -m site --user-site)
+        - export PYSITEDIR=$(python -c "import sys; print(sys.path[-1]))
+        - mkdir -p $PYSITEDIR
         - export COVERAGE_FILE=$PWD/.coverage
         # write the usercustomize.py file so all python processes use coverage and know where the config file is
-        - echo "import os" | sudo tee --append ${PYSITEDIR}/usercustomize.py
-        - echo "os.environ['COVERAGE_PROCESS_START'] = '$PWD/.coveragerc'" | sudo tee --append ${PYSITEDIR}/usercustomize.py
-        - echo "import coverage" | sudo tee --append ${PYSITEDIR}/usercustomize.py
-        - echo "coverage.process_startup()" | sudo tee --append ${PYSITEDIR}/usercustomize.py
+        - echo "import os" |  tee --append ${PYSITEDIR}/usercustomize.py
+        - echo "os.environ['COVERAGE_PROCESS_START'] = '$PWD/.coveragerc'" | tee --append ${PYSITEDIR}/usercustomize.py
+        - echo "import coverage" | tee --append ${PYSITEDIR}/usercustomize.py
+        - echo "coverage.process_startup()" | tee --append ${PYSITEDIR}/usercustomize.py
 
       script:
         - export TOTAL_BUILD_JOBS=1
