--- a/.travis.yml
+++ b/.travis.yml
@@ -107,7 +107,7 @@ jobs:
         # attempt to get a location where we can store the usercustomize.py file
         - python -m site
 #        - export PYSITEDIR=$(python -m site --user-site)
-        - export PYSITEDIR=$(python -c "import sys; print(sys.path[-1]))
+        - export PYSITEDIR=$(python -c "import sys; print(sys.path[-1])")
         - mkdir -p $PYSITEDIR
         - export COVERAGE_FILE=$PWD/.coverage
         # write the usercustomize.py file so all python processes use coverage and know where the config file is
