--- a/.travis.yml
+++ b/.travis.yml
@@ -111,10 +111,10 @@ jobs:
         - mkdir -p $PYSITEDIR
         - export COVERAGE_FILE=$PWD/.coverage
         # write the usercustomize.py file so all python processes use coverage and know where the config file is
-        - echo "import os" |  tee --append ${PYSITEDIR}/usercustomize.py
-        - echo "os.environ['COVERAGE_PROCESS_START'] = '$PWD/.coveragerc'" | tee --append ${PYSITEDIR}/usercustomize.py
-        - echo "import coverage" | tee --append ${PYSITEDIR}/usercustomize.py
-        - echo "coverage.process_startup()" | tee --append ${PYSITEDIR}/usercustomize.py
+        - echo "import os" |  tee --append ${PYSITEDIR}/sitecustomize.py
+        - echo "os.environ['COVERAGE_PROCESS_START'] = '$PWD/.coveragerc'" | tee --append ${PYSITEDIR}/sitecustomize.py
+        - echo "import coverage" | tee --append ${PYSITEDIR}/sitecustomize.py
+        - echo "coverage.process_startup()" | tee --append ${PYSITEDIR}/sitecustomize.py
 
       script:
         - export TOTAL_BUILD_JOBS=1
