--- a/src/engine/MANIFEST.in
+++ b/src/engine/MANIFEST.in
@@ -141,6 +141,7 @@ SCons/Tool/pdf.py
 SCons/Tool/pdflatex.py
 SCons/Tool/pdftex.py
 SCons/Tool/PharLapCommon.py
+SCons/Tool/python.py
 SCons/Tool/qt.py
 SCons/Tool/rmic.py
 SCons/Tool/rpcgen.py
