removed unneeded imports/PEP8

--- a/test/Install/multi-dir/src/SConstruct
+++ b/test/Install/multi-dir/src/SConstruct
@@ -1,9 +1,9 @@
 # This tests for a bug where installing a sequence dirs and subdirs
 # outside the source tree can cause SCons to fail to create the dest
 # dir.
-import os, os.path, shutil
+import os.path
 DefaultEnvironment(tools=[])
 env=Environment(tools=[])
 dst='../build'
-env.Install(os.path.join(dst,'__foo/bar/baz'), 'a')
-env.Install(os.path.join(dst,'__foo/bar/baz/a/b'), 'x/y')
+env.Install(os.path.join(dst, '__foo/bar/baz'), 'a')
+env.Install(os.path.join(dst, '__foo/bar/baz/a/b'), 'x/y')
