move sconsign logic into src/engine/SCons/Utilties, update entry_points to generate sconsign script

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ packages = find:
 [options.entry_points]
 console_scripts =
     scons = SCons.Script.Main:main
+    sconsign = SCons.Utilities.sconsign:main
 
 
 [options.package_data]
