Update location of LICENSE and use same version in sdist and wheel

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = SCons
-version=3.9.9a99
+version=3.9.9a991
 license = MIT
 author = William Deegan
 author_email =bill@baddogconsulting.com
 long_description = file: README.rst
 description = Open Source next-generation build tool.
 group = Development/Tools
-license_file = src/LICENSE.txt
+license_file = LICENSE
 
 
 url = http://www.scons.org/
