give coverage a name

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ jobs:
     - &coverage_jobs
       dist: bionic
       python: 3.7
+      name: coverage
       before_script:
         - python -m pip install -U coverage codecov
         - python -m site
