msvc 10 still hangs

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -85,6 +85,15 @@ build: off
 
 build_script:
 
+  # exclude VS 10.0 because it hangs the testing until this is resolved:
+  # https://help.appveyor.com/discussions/problems/19283-visual-studio-2010-trial-license-has-expired
+  - ps: |
+      New-Item -Name exclude_list.txt -ItemType File
+      $workaround_image = "Visual Studio 2015"
+      if ($env:APPVEYOR_BUILD_WORKER_IMAGE -eq $workaround_image) {
+        Add-Content -Path 'exclude_list.txt' -Value 'test\MSVS\vs-10.0-exec.py'
+      }
+
   # setup coverage by creating the coverage config file, and adding coverage
   # to the sitecustomize so that all python processes start with coverage
   - ps: |
@@ -103,7 +112,7 @@ build_script:
 
   # NOTE: running powershell from cmd is intended because 
   # it formats the output correctly
-  - cmd: powershell -Command "& { if($env:COVERAGE -eq 1) { coverage run -p --rcfile=$($env:COVERAGE_PROCESS_START) runtest.py -j 2 -t -a } else { C:\\%WINPYTHON%\\python.exe runtest.py -j 2 -t -a }; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
+  - cmd: powershell -Command "& { if($env:COVERAGE -eq 1) { coverage run -p --rcfile=$($env:COVERAGE_PROCESS_START) runtest.py -j 2 -t --exclude-list exclude_list.txt -a } else { C:\\%WINPYTHON%\\python.exe runtest.py -j 2 -t --exclude-list exclude_list.txt -a }; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
 
 # run coverage even if there was a test failure
 on_finish:
@@ -111,7 +120,7 @@ on_finish:
       if ($env:COVERAGE -eq 1) {
         & coverage combine
         & coverage report
-        & coverage -i xml -o coverage_xml.xml
+        & coverage xml -i -o coverage_xml.xml
       }
   # running codecov in powershell causes an error so running in platform
   # shells
