Fix setup.cfg to include SCons.* packages. was only includeing SCons.Tool.docbook

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ packages = find:
 
 
 [options.packages.find]
-    include=SCons
+    include=SCons.*
     exclude=template
 
 [options.entry_points]
