--- a/testing/docker/fedora32/test/docker-compose.yml
+++ b/testing/docker/fedora32/test/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   build:
-    image: scons-build-fedora30:latest
+    image: scons-test-fedora32:latest
     restart: always
     environment:
       - DISPLAY
@@ -15,7 +15,7 @@ services:
       - /etc/shadow:/etc/shadow:ro
       - /etc/group:/etc/group:ro
       - ./startup:/startup
-    container_name: SCons_Build_Fedora30
+    container_name: SCons_Test_Fedora32
     entrypoint: /startup/setup_container.sh
     user: $DOCKERUID:$DOCKERGID
     working_dir: $HOME
