--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ long_description = file: README.rst
 long_description_content_type = text/x-rst
 description = Open Source next-generation build tool.
 group = Development/Tools
-license_files = LICENSE
+license_file = LICENSE
 
 
 url = http://www.scons.org/
@@ -62,6 +62,9 @@ console_scripts =
 * = *.txt, *.rst
 SCons.Tool.docbook = *.*
 
+[sdist]
+    dist-dir=build/dist
 
 [bdist_wheel]
 universal=true
+dist-dir=build/dist
